--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -11,24 +11,31 @@
 </head>
 
 <body>
-	<div class="container special">
-		<h1>Login</h1>
 
-		<div th:if="${param.error}" class="mt-4 alert alert-danger">
-			Identifiant et/ou mot de passe incorrect
+	<header th:insert="fragments.html :: nav"> </header>
+
+	<div class="container mt-5">
+		<div class="row">
+			<div class="col-md-5 m-auto">
+				<h1 class="text-center">Login</h1>
+
+				<div th:if="${param.error}" class="mt-4 alert alert-danger">
+					Identifiant et/ou mot de passe incorrect
+				</div>
+
+				<form action="/admin/login" method="post" class="mb-4">
+					<div class="mb-3">
+						<label for="username" class="form-label">Username</label>
+						<input type="email" id="username" name="username" required class="form-control">
+					</div>
+					<div class="mb-3">
+						<label for="password" class="form-label">Password</label>
+						<input type="password" id="password" name="password" required class="form-control">
+					</div>
+					<button type="submit" class="btn btn-info w-100">Submit</button>
+				</form>
+			</div>
 		</div>
-
-		<form action="/admin/login" method="post" class="mb-4">
-			<div class="mb-3">
-				<label for="username" class="form-label">Username</label>
-				<input type="email" id="username" name="username" required class="form-control">
-			</div>
-			<div class="mb-3">
-				<label for="password" class="form-label">Password</label>
-				<input type="password" id="password" name="password" required class="form-control">
-			</div>
-			<button type="submit" class="btn btn-primary ">Submit</button>
-		</form>
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
