--- a/src/main/resources/templates/event/edit.html
+++ b/src/main/resources/templates/event/edit.html
@@ -12,32 +12,44 @@
 
 <body>
 
-	<div>
-		<form method="post" th:action="@{/admin/events/update}" th:object="${event}">
+	<header th:insert="fragments.html :: nav"> </header>
 
-			<div class="form-group">
-				<label for="title">Titre</label>
-				<input type="text" th:field="*{title}" class="form-control" id="title">
+	<div class="container mt-5">
+		<div class="row">
+
+			<div class="col-md-6 m-auto">
+				
+				<h1 class="text-center">Modifier évènement</h1>
+				<form method="post" th:action="@{/admin/events/update}" th:object="${event}">
+
+					<div class="form-group mb-3">
+						<label for="title">Titre</label>
+						<input type="text" th:field="*{title}" class="form-control" id="title">
+					</div>
+					<div class="form-group mb-3">
+						<label for="date">Description</label>
+						<input type="date" th:field="*{date}" class="form-control" id="date">
+					</div>
+
+					<div class="form-group mb-3">
+						<label for="description">Description</label>
+						<textarea class="form-control" th:field="*{description}" rows="3" id="description"></textarea>
+					</div>
+
+					<div class="form-group mb-3">
+						<label for="imageUrl">Image</label>
+						<input type="file" th:field="*{imageUrl}" class="form-control" id="imageUrl">
+					</div>
+
+					<input type="hidden" th:field="*{id}" class="form-control">
+
+					<div class="d-flex justify-content-center">
+						<button type="submit" class="btn btn-info w-50">Modifier</button>
+					</div>
+					
+				</form>
 			</div>
-			<div class="form-group">
-				<label for="date">Description</label>
-				<input type="date" th:field="*{date}" class="form-control" id="date">
-			</div>
-
-			<div class="form-group">
-				<label for="description">Description</label>
-				<textarea class="form-control" th:field="*{description}" rows="3" id="description"></textarea>
-			</div>
-
-			<div class="form-group">
-				<label for="imageUrl">Image</label>
-				<input type="file" th:field="*{imageUrl}" class="form-control" id="imageUrl">
-			</div>
-
-			<input type="hidden" th:field="*{id}" class="form-control">
-
-			<button type="submit" class="btn btn-primary">Modifier</button>
-		</form>
+		</div>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
