--- a/src/main/resources/templates/event/events.html
+++ b/src/main/resources/templates/event/events.html
@@ -11,42 +11,54 @@
 </head>
 
 <body>
-	<table class="table  table-responsive">
-		<thead class="thead-light shadow ">
-			<tr>
-				<th>Titre</th>
-				<th>Description</th>
-				<th>Date</th>
-				<th></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr class="text-center" th:text="${events == null or events.empty}">
-				<td colspan="4">Aucun évènement enregistré</td>
-			</tr>
+	<header th:insert="fragments.html :: nav"> </header>
 
-			<tr th:each="event: ${events}">
-				<td th:text="${event.title}">Titre</td>
-				<td
-					th:text="${event.description.length() > 30} ? ${#strings.substring(event.description, 0, 30)} + '...' : ${event.description}">
-					Description</td>
-				<td th:text="${event.date}">date</td>
-				<td class="d-flex justify-content-around">
-					<a th:href="@{/admin/events/edit/{id}(id=${event.id})}" class="btn btn-primary btn-sm me-1" title="Editer">
-						<i class="bi bi-pencil-square"></i>
-					</a>
-					<a th:href="@{/admin/events/delete/{id}(id=${event.id})}" onclick="return confirm('Confirmer');" class="btn btn-danger btn-sm" title="Supprimer">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-							class="bi bi-archive" viewBox="0 0 16 16">
-							<path
-								d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5zm13-3H1v2h14zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
-						</svg>
-					</a>
-				</td>
-			</tr>
+	<div class="container mt-4">
 
-		</tbody>
-	</table>
+		<div class="d-flex justify-content-end my-2">
+			<a th:href="@{/admin/events/new}" class="btn btn-info">
+				<i class="bi bi-plus-circle "></i> Ajouter un évènement
+			</a>
+		</div>
+		<table class="table table-responsive">
+			<thead class="thead-light shadow ">
+				<tr>
+					<th>Titre</th>
+					<th>Description</th>
+					<th>Date</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr class="text-center" th:text="${events == null or events.empty}">
+					<td colspan="4">Aucun évènement enregistré</td>
+				</tr>
+
+				<tr th:each="event: ${events}">
+					<td th:text="${event.title}">Titre</td>
+					<td
+						th:text="${event.description.length() > 30} ? ${#strings.substring(event.description, 0, 30)} + '...' : ${event.description}">
+						Description</td>
+					<td th:text="${event.date}">date</td>
+					<td class="d-flex justify-content-around">
+						<a th:href="@{/admin/events/edit/{id}(id=${event.id})}" class="btn btn-primary btn-sm me-1"
+							title="Editer">
+							<i class="bi bi-pencil-square"></i>
+						</a>
+						<a th:href="@{/admin/events/delete/{id}(id=${event.id})}" onclick="return confirm('Confirmer');"
+							class="btn btn-danger btn-sm" title="Supprimer">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+								class="bi bi-archive" viewBox="0 0 16 16">
+								<path
+									d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5zm13-3H1v2h14zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
+							</svg>
+						</a>
+					</td>
+				</tr>
+
+			</tbody>
+		</table>
+	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
 		defer>
