--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,25 +8,47 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<title>évènements</title>
 </head>
 
 <body>
 
-	<div class="container">
+	<header>
+		<nav class="navbar bg-success">
+			<div class="container-fluid ">
+				<a class="navbar-brand text-white" href="/">Event Booker</a>
+
+				<div class="d-flex justify-content-end" th:if="${session.username != null}">
+					<a class="btn btn-outline-light" th:href="@{/admin/events}">Dashboard</a>
+				</div>
+			</div>
+		</nav>
+	</header>
+
+	<div class="container mt-5">
+
+		<h1 class="text-center">Les évènements</h1>
+
 		<div class="row">
-			<div class="card mb-3 mx-2" style="max-width: 540px;">
+
+			<div class="card mb-3 mx-2" style="max-width: 540px;" th:each="event: ${events}">
 				<div class="row g-0">
 					<div class="col-md-4">
-						<img src="..." class="img-fluid rounded-start" alt="...">
+						<img th:src="${event.imageUrl}" class="img-fluid rounded-start" th:alt="${event.title}">
 					</div>
 					<div class="col-md-8">
 						<div class="card-body">
-							<h5 class="card-title">Card title</h5>
-							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-								additional content. This content is a little bit longer.</p>
-							<p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+							<h5 class="card-title" th:text="${event.title}"></h5>
+							<p class="card-text" th:text="${event.description}"></p>
+							<p class="card-text"><small class="text-body-secondary" th:text="${event.date}"></small></p>
+
 						</div>
+						<div class="card-body w-100">
+							<a class="btn btn-info w-100">S'enregistrer</a>
+						</div>
+
 					</div>
+
 				</div>
 			</div>
 		</div>
