--- a/src/main/resources/templates/event/add.html
+++ b/src/main/resources/templates/event/add.html
@@ -28,7 +28,7 @@
 				<div th:if="${error != null}" class="mt-4 alert alert-danger">
 					<span th:text="${error}"></span>
 				</div>
-				<form method="post" th:action="@{/admin/events/new}" th:object="${event}" enctype="multipart/form-data">
+				<form method="post" th:action="@{/admin/events/new}" th:object="${event}" enctype="multipart/form-data" accept="image/*">
 					<div class="form-group mb-3">
 						<label for="title">Titre</label>
 						<input type="text" th:field="*{title}" class="form-control" id="title">
