--- a/src/main/resources/templates/event/edit.html
+++ b/src/main/resources/templates/event/edit.html
@@ -20,7 +20,7 @@
 			<div class="col-md-6 m-auto">
 				
 				<h1 class="text-center">Modifier évènement</h1>
-				<form method="post" th:action="@{/admin/events/update}" th:object="${event}">
+				<form method="post" th:action="@{/admin/events/update}" th:object="${event}" enctype="multipart/form-data">
 
 					<div class="form-group mb-3">
 						<label for="title">Titre</label>
