--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,17 +31,16 @@
 
 		<div class="row">
 
-			<div class="card mb-3 mx-2" style="max-width: 540px;" th:each="event: ${events}">
+			<div class="card mb-3 mx-2 ps-0" style="max-width: 540px;" th:each="event: ${events}">
 				<div class="row g-0">
-					<div class="col-md-4">
-						<img th:src="${event.imageUrl}" class="img-fluid rounded-start" th:alt="${event.title}">
+					<div class="col-md-4 position-relative">
+						<img th:src="@{'/src/main/resources/static/events/' + ${event.imageUrl}}" class="img-fluid rounded- h-100" th:alt="${event.title}">
+						<span class="position-absolute top-0 start-0 "><small class="text-white bg-danger p-1" th:text="${event.date}"></small></span>
 					</div>
 					<div class="col-md-8">
-						<div class="card-body">
+						<div class="card-body pt-0">
 							<h5 class="card-title" th:text="${event.title}"></h5>
 							<p class="card-text" th:text="${event.description}"></p>
-							<p class="card-text"><small class="text-body-secondary" th:text="${event.date}"></small></p>
-
 						</div>
 						<div class="card-body w-100">
 							<a class="btn btn-info w-100">S'enregistrer</a>
