--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,7 +27,7 @@
 
 	<div class="container mt-5">
 
-		<h1 class="text-center">Les évènements</h1>
+		<h1 class="text-center mb-4">Les évènements</h1>
 
 		<div class="row">
 
@@ -82,7 +82,7 @@
 						<input type="hidden" id="eventId" name="eventId">
 					</form>
 					
-					<div class="" id="registerFeedbackCode">
+					<div class="d-flex justify-content-center" id="registerFeedbackCode">
 						
 					</div>
 				</div>
@@ -164,7 +164,7 @@
 					}).catch(error => {
 					
 						registerFeedBackMessage.classList.add("alert-danger", "alert");
-						registerFeedBackMessage.innerHTML = error;
+						registerFeedBackMessage.innerHTML = error.message;
 						return;
 					})
 				} else {
